# combinatorics-hs

./: combinatorics-hs.cabal
src/: Combinatorics.hs
